--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "nodemon": "^2.0.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "type": "module"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
